# paamonim_control_board

./: README.md  add_team_members.py  app.py  cockpit_template.xlsx  common_utils.py  pyproject.toml  roi.py  scheduled_task.py
login/: login.py
src/: main.py
src/common/: common_utils.py  constants.py
src/families_sheet/: create_families_sheet.py
src/teams_list_sheet/: create_teams_list_sheet.py
templates/: login.html
