[tool.poetry]
name = "paamonim_control_board"
version = "0.1.0"
description = ""
authors = ["Roi Dital <roi.dital@cyberark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.20.0"
openpyxl = "^3.1.2"
flask = "^3.0.3"
pyvirtualdisplay = "^3.0"
easyprocess = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
