[tool.poetry]
name = "paamonim_control_board"
version = "0.1.0"
description = ""
authors = ["Roi Dital <roi.dital@cyberark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.1.2"
flask = {extras = ["async"], version = "^3.0.3"}
pyppeteer = "^2.0.0"
nest-asyncio = "^1.6.0"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
